--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/raglaks/bamazon#readme",
   "dependencies": {
     "inquirer": "^6.2.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "table": "^5.1.0"
   }
 }
