updated node module for printing table to console

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/raglaks/bamazon#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "inquirer": "^6.2.0",
-    "mysql": "^2.16.0",
-    "table": "^5.1.0"
+    "mysql": "^2.16.0"
   }
 }
