--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/raglaks/bamazon#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "easy-table": "^1.1.1",
     "inquirer": "^6.2.0",
     "mysql": "^2.16.0"
   }
